automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -2,6 +2,21 @@
   font-family: "Helvetica", "Arial", "san-serif";
 }
 
+header{height: 100px;
+border-bottom: 1px solid #cccccc;}
+
 body {
   padding: 0 30px 0 30px;
 }
+
+header nav{float:right;
+}
+
+nav ul{padding:0;
+margin:40px 0 0 0;
+}
+
+nav ul li{display: inline;
+margin-right: 10px;
+}
+
