--- a/style.css
+++ b/style.css
@@ -19,3 +19,9 @@ margin:40px 0 0 0;
 nav ul li{display: inline;
 margin-right: 10px;
 }
+
+nav a{text-decoration: none;
+color:#007bff;
+font-size: 18px;
+}
+
