--- a/style.css
+++ b/style.css
@@ -2,6 +2,33 @@
   font-family: "Helvetica", "Arial", "san-serif";
 }
 
+header{height: 100px;
+border-bottom: 1px solid #cccccc;}
+
 body {
   padding: 0 30px 0 30px;
+}
+
+header nav{float:right;
+}
+
+nav ul{padding:0;
+margin:40px 0 0 0;
+}
+
+nav ul li{display: inline;
+margin-right: 10px;
+}
+
+nav a{text-decoration: none;
+color:#007bff;
+font-size: 18px;
+}
+
+header h3{float:left;
+font-size: 30px;
+}
+
+header h3 a{text-decoration: none;
+color: #868e96;
 }
